# fl_project

./: .gitignore  FEDPER_GUIDE.md  FIXES_APLICADOS.md  LAINF-DEPLOY.md  LICENSE  LIMPEZA_RESUMO.md  README  README.md  SETUP_GUIDE.md  analysis_tool.py  client.py  comparison_analysis.py  dockerfile  durations_analysis.py  estrutura.txt  eved_data.ipynb  pyproject.toml  requeriments.txt  run.sh  run_all_strategies.sh  server.py  start_mlflow.bat  todo.md  trajectory_analysis.py  utils.py
.claude/: settings.local.json
analysis/: data_analysis.py
data/: Clients_generator_aGDA.ipynb  Clients_generator_eVED.ipynb  EVED_Clients.ipynb  check_clients_eVED.py  eVED-train-test-generator.py  eVED_Vizu.py  trip_client_0_trip_706.html  trip_client_0_trip_707.html
data/AGDA_Clients/client_0/: trajeto_2.csv  trajeto_4.csv
data/AGDA_Clients/client_1/: trajeto_1.csv  trajeto_3.csv  trajeto_8.csv
data/AGDA_Clients/client_2/: trajeto_6.csv
data/EVED_Clients/test/client_0/: metadata.json  trip_1015.0.parquet  trip_1026.0.parquet  trip_1027.0.parquet  trip_1042.0.parquet  trip_1049.0.parquet  trip_1050.0.parquet  trip_1052.0.parquet  trip_1055.0.parquet  trip_1062.0.parquet  trip_1069.0.parquet  trip_1070.0.parquet  trip_1076.0.parquet  trip_1079.0.parquet  trip_1081.0.parquet  trip_1082.0.parquet  trip_1104.0.parquet  trip_1111.0.parquet  trip_1112.0.parquet  trip_1125.0.parquet  trip_1126.0.parquet  trip_1129.0.parquet  trip_1134.0.parquet  trip_1143.0.parquet  trip_1163.0.parquet  trip_1164.0.parquet  trip_1174.0.parquet  trip_1180.0.parquet  trip_1183.0.parquet  trip_1186.0.parquet  trip_1533.0.parquet  trip_1534.0.parquet  trip_1550.0.parquet  trip_1551.0.parquet  trip_1579.0.parquet  trip_1588.0.parquet  trip_1622.0.parquet  trip_1635.0.parquet  trip_1654.0.parquet  trip_1668.0.parquet  (+18 more)
data/EVED_Clients/test/client_1/: metadata.json  trip_1001.0.parquet  trip_1025.0.parquet  trip_1031.0.parquet  trip_1036.0.parquet  trip_1045.0.parquet  trip_1048.0.parquet  trip_1061.0.parquet  trip_1065.0.parquet  trip_1069.0.parquet  trip_1071.0.parquet  trip_1077.0.parquet  trip_1078.0.parquet  trip_1079.0.parquet  trip_1082.0.parquet  trip_1083.0.parquet  trip_1090.0.parquet  trip_1101.0.parquet  trip_1118.0.parquet  trip_1119.0.parquet  trip_1129.0.parquet  trip_1137.0.parquet  trip_1143.0.parquet  trip_1152.0.parquet  trip_1155.0.parquet  trip_1162.0.parquet  trip_1168.0.parquet  trip_1175.0.parquet  trip_1176.0.parquet  trip_1181.0.parquet  trip_1209.0.parquet  trip_1212.0.parquet  trip_1218.0.parquet  trip_1223.0.parquet  trip_1229.0.parquet  trip_1234.0.parquet  trip_1239.0.parquet  trip_1241.0.parquet  trip_1242.0.parquet  trip_1244.0.parquet  (+125 more)
data/EVED_Clients/test/client_10/: metadata.json  trip_1158.0.parquet  trip_1178.0.parquet  trip_1204.0.parquet  trip_1229.0.parquet  trip_1282.0.parquet  trip_1311.0.parquet  trip_1338.0.parquet  trip_1340.0.parquet  trip_1358.0.parquet  trip_1446.0.parquet  trip_1560.0.parquet  trip_1563.0.parquet  trip_1568.0.parquet  trip_1600.0.parquet  trip_1906.0.parquet  trip_1949.0.parquet  trip_2393.0.parquet
data/EVED_Clients/test/client_100/: metadata.json  trip_2.0.parquet
data/EVED_Clients/test/client_101/: metadata.json  trip_1667.0.parquet
data/EVED_Clients/test/client_102/: metadata.json  trip_2740.0.parquet  trip_2756.0.parquet  trip_2757.0.parquet  trip_2775.0.parquet  trip_2777.0.parquet  trip_2778.0.parquet  trip_2780.0.parquet  trip_2797.0.parquet  trip_2817.0.parquet  trip_2820.0.parquet  trip_2832.0.parquet  trip_2844.0.parquet  trip_2852.0.parquet  trip_2857.0.parquet  trip_2871.0.parquet  trip_2872.0.parquet  trip_2885.0.parquet  trip_2896.0.parquet  trip_2919.0.parquet  trip_2920.0.parquet  trip_2922.0.parquet  trip_2928.0.parquet  trip_2932.0.parquet  trip_2952.0.parquet  trip_2957.0.parquet  trip_2970.0.parquet  trip_3006.0.parquet  trip_3029.0.parquet  trip_3035.0.parquet  trip_3037.0.parquet  trip_3049.0.parquet  trip_3058.0.parquet  trip_3062.0.parquet  trip_3067.0.parquet  trip_3069.0.parquet  trip_3087.0.parquet  trip_3098.0.parquet  trip_3101.0.parquet  trip_3109.0.parquet  (+25 more)
data/EVED_Clients/test/client_103/: metadata.json  trip_746.0.parquet
data/EVED_Clients/test/client_104/: metadata.json  trip_1184.0.parquet
data/EVED_Clients/test/client_105/: metadata.json  trip_1139.0.parquet  trip_1149.0.parquet  trip_1158.0.parquet  trip_1162.0.parquet  trip_1165.0.parquet  trip_1166.0.parquet  trip_1169.0.parquet  trip_1173.0.parquet  trip_1177.0.parquet  trip_1178.0.parquet  trip_1180.0.parquet  trip_1188.0.parquet  trip_1195.0.parquet  trip_1198.0.parquet  trip_1199.0.parquet  trip_1201.0.parquet  trip_1227.0.parquet  trip_1228.0.parquet  trip_1229.0.parquet  trip_1231.0.parquet  trip_1239.0.parquet  trip_1249.0.parquet  trip_1254.0.parquet  trip_1269.0.parquet  trip_1411.0.parquet  trip_1412.0.parquet  trip_1421.0.parquet  trip_1426.0.parquet  trip_1434.0.parquet  (+118 more)
data/client_1/: trajeto_1.csv  trajeto_4.csv  trajeto_7.csv
data/client_2/: trajeto_1.csv  trajeto_2.csv  trajeto_3.csv  trajeto_5.csv  trajeto_8.csv  trajeto_9.csv
data/client_3/: trajeto_10.csv  trajeto_2.csv  trajeto_3.csv  trajeto_4.csv  trajeto_5.csv  trajeto_7.csv
data/eVED-animation/: .gitignore  GUIA_STREAMLIT.md  README.md  __init__.py  app_streamlit.py  eved_vizu.py  requirements.txt  run_app.bat  run_app.sh  test_charts.py
docs/: SETUP_RASP.md
fleven/: analysis.py  client.py  client_mapping.py  collector.py  mlflow_utils.py  models.py  server.py  utils.py  utils_agda.py
metrics/client_1/: metrics_history.json  model_round_10.pt  model_round_15.pt  model_round_5.pt
metrics/client_2/: metrics_history.json  model_round_10.pt  model_round_15.pt  model_round_5.pt
metrics/client_3/: metrics_history.json  model_round_10.pt  model_round_15.pt  model_round_5.pt
results/: analysis_fedadagrad.json  analysis_fedadam.json  analysis_fedavg.json  analysis_fedyogi.json  detailed_metrics_fedadagrad.csv  detailed_metrics_fedadam.csv  detailed_metrics_fedavg.csv  detailed_metrics_fedyogi.csv  metrics_fedadagrad.csv  metrics_fedavg.csv  summary_report.json
(+32474 files in other folders)
