[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fleven"
version = "1.0.0"
description = "FLEVEn — Federated Learning for Vehicular Environment"

readme = "README.md"
keywords = ["federated-learning", "flower", "mlflow", "federated-learning-vehicular", "time-series", "lstm", "pytorch", "obd"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

authors = [
    {name = "João C. Braz", email = "calbraz@gmail.com"},
    {name = "José Wilson C. Souza", email = "josewilson@matematica.ufrj.br"},
    {name = "Erick de Souza Lima", email = "erickcefetbcc@gmail.com"},
    {name = "Mina", email = "minammonteiro4@gmail.com"},
]

maintainers = [
    {name = "José Wilson C. Souza", email = "josewilson@matematica.ufrj.br"}
]

license = {text = "Apache-2.0"}
dependencies = [
    "flwr[simulation]>=1.22.0,<2.0",
    "torch>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "toml",
    "mlflow>=2.9.0",
    "pyarrow>=12.0.0"  # NOVO: necessário para ler arquivos .parquet
]

[project.urls]
Repository = "https://github.com/josewilsonsouza/fleven"
"Issue Tracker" = "https://github.com/josewilsonsouza/fleven/issues"

[tool.hatch.build.targets.wheel]
packages = ["fleven"]

[tool.flwr.app]
publisher = "Lainf_Dmtic_Inmetro"

[tool.flwr.app.components]
serverapp = "fleven.server:app"
clientapp = "fleven.client:app"

[tool.flwr.app.config]
# Configurações de Federação
strategy = "fedavg"  # Opções: "fedavg", "fedadam", "fedadagrad", "fedyogi"
rounds = 10
min-nodes = 10  # Mínimo de nós necessários por round (aumente se tiver mais clientes válidos)
seed = 64

# 🔧 Caminhos (ajustar conforme necessário)
# Para eVED, deixe vazio "" para usar caminhos relativos ou especifique o caminho absoluto
data-base-path = ""  # Deixe vazio para usar "data/EVED_Clients" ou especifique caminho completo
metrics-base-path = "" # caminho das metricas
results-base-path = "" # caminho dos results

# Configurações MLflow
mlflow-tracking-uri = "https://jwsouza13-fleven.hf.space"
mlflow-experiment-name = "FLEVEn-eVED-Experiments"  # teste no eVED
mlflow-enable = true

# ========================================
# 🚗 CONFIGURAÇÕES PARA O DATASET eVED
# ========================================

# Escolha dos modelos do FLEVEn: "lstm", "lstm_dense", "mlp"
model-type = "lstm"

# Parâmetros para "lstm" e "mlp"
hidden-size = 64  # 32 -> 64 (mais capacidade para padrões complexos)

# Parâmetros para "lstm_dense" (modelo adaptado)
lstm-hidden-size = 64   # 32 -> 64
dense-hidden-size = 32  # 16 -> 32

# Parâmetros para "lstm" e "lstm_dense"
input-size = 2  # ALTERADO: 3 -> 5 (número de features globais do eVED)
                # Features: Vehicle Speed, Energy_Consumption
num-layers = 2  #(mais camadas LSTM para capturar padrões temporais)
dropout = 0.2

# ========================================
# 📊 CONFIGURAÇÕES DE SÉRIES TEMPORAIS
# ========================================
sequence-length = 50     # 100 -> 50 (janela de entrada menor, mais adequada para trips curtas)
prediction-length = 10   # 50 -> 10 (prever 10 pontos à frente)
target-column = "Energy_Consumption"

# ========================================
# 🎓 CONFIGURAÇÕES DE TREINAMENTO
# ========================================
batch-size = 64
learning-rate = 1e-4
local-epochs = 2
max-grad-norm = 1.0

# CONFIGURAÇÕES DE DADOS
train-test-split = 0.7  # Não usado pelo eVED (usa pastas train/test separadas)

# Configurações de Checkpoint
save-checkpoint-every = 5

[tool.flwr.app.config.strategy-params]
# Parâmetros para FedAdam
eta = 0.01
beta_1 = 0.9
beta_2 = 0.999

# Parâmetros para FedAdagrad
eta_adagrad = 0.1
initial_accumulator_value = 0.1

# Parâmetros para FedYogi
eta_yogi = 0.01
beta_1_yogi = 0.9
beta_2_yogi = 0.999
initial_accumulator_value_yogi = 1e-6

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 20
options.backend.client-resources.num-cpus = 1
options.backend.client-resources.num-gpus = 0.0

# Configurações de nó (para uso futuro com configurações específicas por cliente)
#[[tool.flwr.federations.local-simulation.options.supernode.resources]]
#node-config.partition-id = 1
#node-config.num-partitions = 3

#[[tool.flwr.federations.local-simulation.options.supernode.resources]]
#node-config.partition-id = 2
#node-config.num-partitions = 3

#[[tool.flwr.federations.local-simulation.options.supernode.resources]]
#node-config.partition-id = 3
#node-config.num-partitions = 3

[tool.flwr.federations.fleven-deployment]
address = "127.0.0.1:9093"
insecure = true